--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,17 +2,20 @@
 
 @font-face {
   font-family: elmssans-bold;
-  src: url(assets/Fonts/ElmsSans-Bold.ttf);
+  src: url(assets/Fonts/ElmsSans-Bold.woff2) format("woff2");
+  font-display: swap;
 }
 
 @font-face {
   font-family: elmssans-medium;
-  src: url(assets/Fonts/ElmsSans-Medium.ttf);
+  src: url(assets/Fonts/ElmsSans-Medium.woff2) format("woff2");
+  font-display: swap;
 }
 
 @font-face {
   font-family: elmssans-light;
-  src: url(assets/Fonts/ElmsSans-Light.ttf);
+  src: url(assets/Fonts/ElmsSans-Light.woff2) format("woff2");
+  font-display: swap;
 }
 
 @theme {
@@ -25,8 +28,4 @@
   --color-hover: rgba(0, 0, 0, 0.5);
   --breakpoint-desktop: 1000px;
   --breakpoint-tablet: 830px;
-}
-
-p {
-  color: #224d86;
 }
