--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,4 +29,8 @@
   --breakpoint-desktop: 1000px;
   --breakpoint-tablet: 830px;
 }
-
+body {
+  user-select: none !important;
+  -moz-user-select: none !important;
+  -webkit-user-drag: none !important;
+}
