--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,3 +49,39 @@ button {
 button {
   cursor: pointer !important;
 }
+
+.loading-dot {
+  width: 15px;
+  height: 15px;
+  background: black;
+  border-radius: 50px;
+  margin-right: 8px;
+  margin-top: 20px;
+
+  opacity: 0;
+  animation-name: showhide;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+.loading-dot:nth-child(1) {
+  animation-delay: 0.3s;
+}
+.loading-dot:nth-child(2) {
+  animation-delay: 0.6s;
+}
+.loading-dot:nth-child(3) {
+  animation-delay: 0.9s;
+}
+
+@keyframes showhide {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
