--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,7 +53,7 @@ button {
 .loading-dot {
   width: 15px;
   height: 15px;
-  background: white;
+  background: #e0f7fa;
   border-radius: 50px;
   margin-right: 8px;
   margin-top: 20px;
@@ -119,16 +119,16 @@ button {
   width: 45px;
   height: 45px;
   z-index: 20;
-  background-color: white;
+  background-color: #e0f7fa;
   border-radius: 50%;
 }
 .slick-prev:hover,
 .slick-next:hover {
-  background-color: white;
+  background-color: #e0f7fa;
 }
 .slick-prev:focus,
 .slick-next:focus {
-  background-color: white;
+  background-color: #e0f7fa;
 }
 .slick-prev {
   top: 90%;
@@ -145,4 +145,24 @@ button {
   opacity: 1;
   font-size: 40px;
   color: #1f4e79;
+}
+select {
+  appearance: base-select;
+  overflow: hidden;
+  padding: 10px 10px 10px 12px;
+  border: none !important;
+  outline: none !important;
+}
+::picker(select) {
+  border: none;
+  background-color: #e0f7fa;
+  margin: 0.4rem 0;
+}
+option:checked {
+  background-color: #2f80ed;
+  color: #e0f7fa;
+}
+option:hover {
+  background-color: #2f80ed;
+  color: #e0f7fa;
 }
