--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -167,3 +167,9 @@ option:hover {
   background-color: #2f80ed;
   color: #e0f7fa;
 }
+input:invalid {
+  box-shadow: 0px 0px 5px 2px red;
+}
+/* input:valid {
+  box-shadow: 0px 0px 0px 0px red;
+} */
