--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,6 +27,7 @@
   --color-card: #2f80ed;
   --color-hover: rgba(0, 0, 0, 0.5);
   --breakpoint-desktop: 1000px;
+  /* --breakpoint-desktop: 1000px; */
   --breakpoint-tablet: 830px;
 }
 body {
