--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,7 @@
   --breakpoint-desktop: 1000px;
   /* --breakpoint-desktop: 1000px; */
   --breakpoint-tablet: 830px;
+  --breakpoint-extra-large: 1250px;
 }
 body {
   user-select: none;
